# thunder-forge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  tf.example.yml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
admin/: Dockerfile  entrypoint.sh  requirements.txt
admin/.streamlit/: config.toml
admin/thunder_admin/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  checks.py  config.py  db.py  deploy.py  hf.py  tz.py
configs/: litellm-config.yaml  node-assignments.yaml  node-assignments.yaml.example
docker/: .env.example  docker-compose.yml  litellm-entrypoint.sh
docs/: local-test-guide.md  setup-guide.md
docs/plans/: 2026-03-14-cluster-cli.md  2026-03-15-session-updates.md  2026-03-19-deploy-pipeline-refactor.md
docs/specs/: 2026-03-14-thunder-forge-cluster-cli-design.md  2026-03-19-deploy-pipeline-refactor-design.md
olla/: olla.yaml
openwebui/: compose.yml
scripts/: .env.example  setup-node.sh  setup_env.py
src/api/: webhook.py
src/bot/: app.py
src/services/: auth_service.py  config_service.py  fabricnet_service.py  hosts_service.py  macos_networksetup_service.py  monitor_service.py  netprobe_service.py  ssh_service.py
src/thunder_forge/: __init__.py  cli.py
tests/: conftest.py  test_admin_auth.py  test_admin_bootstrap.py  test_admin_checks.py  test_admin_config.py  test_admin_deploy_lock.py  test_admin_hf.py  test_admin_tz.py  test_config.py  test_deploy.py  test_health.py  test_models.py  test_parse_cluster_config.py  test_preflight.py  test_ssh.py
(+36 files in other folders)
