[project]
name = "thunder-forge"
version = "0.1.0"
description = "CLI for managing a local MLX inference cluster"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.scripts]
thunder-forge = "thunder_forge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thunder_forge"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
